wip/SecurityGroups.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "security-group for MyVpc",
  "Metadata": {

  },
  "Parameters": {
    "VPCID": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "Select Virtual Private Cloud ID."
    }
  },
  "Mappings": {

  },
  "Conditions": {

  },
  "Resources": {
    "WebServersSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "MyServerSG",
        "GroupDescription": "SG Created for Web Servers",
        "VpcId": {
          "Ref": "VPCID"
        },
        "SecurityGroupIngress": [{
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [{
          "Key": "Name",
          "Value": "WebServersSG"
        }]
      }
    }
  },
  "Outputs": {

  }
}
