wip/vpc-sg-ec2.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "My Base network:VPC,Network,NAT gateway",
  "Metadata": {

  },
  "Parameters": {
    "Subnet1Cidr": {
      "Description": "Choose Cidr for Subnet1",
      "Type": "String",
      "Default": "10.0.1.1/24"
    },
    "Subnet2Cidr": {
      "Description": "Choose Cidr for Subnet2",
      "Type": "String",
      "Default": "10.0.2.1/24"
    },
    "Subnet3Cidr": {
      "Description": "Choose Cidr for Subnet1",
      "Type": "String",
      "Default": "10.0.3.1/24"
    },
    "Subnet4Cidr": {
      "Description": "Choose Cidr for Subnet2",
      "Type": "String",
      "Default": "10.0.4.1/24"
    },
    "Subnet1AZs": {
      "Description": "Choose AZ for Subnet1",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
    "Subnet2AZs": {
      "Description": "Choose AZ for Subnet2",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
    "Subnet3AZs": {
      "Description": "Choose AZ for Priv-Subnet1",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
    "Subnet4AZs": {
      "Description": "Choose AZ for Priv-Subnet2",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
    "WebserverKeyName": {
      "Description": "Choose Key Name",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "WebServerInstanceType": {
      "Description": "Choose Instance WebServerInstanceType",
      "Type": "String",
      "Default": "t2.micro",
      "AllowedValues": ["t2.micro", "t2.nano", "t2.small"]
    }
  },
  "Mappings": {
    "AMIID": {
      "us-east-1": {
        "64": "ami-013be31976ca2c322"
      },
    }
  },
  "Conditions": {

  },
  "Resources": {
    "MyVpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "Tags": [{
          "Key": "Name",
          "Value": "MyVpc"
        }]
      }
    },
    "Subnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": true,
        "AvailabilityZone": {
          "Ref": "Subnet1AZs"
        },
        "VpcId": {
          "Ref": "MyVpc"
        },
        "CidrBlock": {
          "Ref": "Subnet1Cidr"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Pub-Subnet1"
        }]
      }
    },
    "Subnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": true,
        "AvailabilityZone": {
          "Ref": "Subnet2AZs"
        },
        "VpcId": {
          "Ref": "MyVpc"
        },
        "CidrBlock": {
          "Ref": "Subnet2Cidr"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Pub-Subnet2"
        }]
      }
    },
    "Subnet3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "AvailabilityZone": {
          "Ref": "Subnet3AZs"
        },
        "VpcId": {
          "Ref": "MyVpc"
        },
        "CidrBlock": {
          "Ref": "Subnet3Cidr"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Priv-Subnet1"
        }]
      }
    },
    "Subnet4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "AvailabilityZone": {
          "Ref": "Subnet4AZs"
        },
        "VpcId": {
          "Ref": "MyVpc"
        },
        "CidrBlock": {
          "Ref": "Subnet4Cidr"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Priv-Subnet2"
        }]
      }
    },
    "MyVPCIGW": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{
          "Key": "Name",
          "Value": "MyVPCIGW"
        }]
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MyVpc"
        },
        "InternetGatewayId": {
          "Ref": "MyVPCIGW"
        }
      }
    },
    "SubnetRTpub": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVpc"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "SubnetRTpub"
        }]
      }
    },
    "SubnetRTpriv": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVpc"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "SubnetRTpriv"
        }]
      }
    },
    "RouteIGW": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "SubnetRTpub"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyVPCIGW"
        }
      }
    },
    "Subnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "Subnet1"
        },
        "RouteTableId": {
          "Ref": "SubnetRTpub"
        }
      }
    },
    "Subnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "Subnet2"
        },
        "RouteTableId": {
          "Ref": "SubnetRTpub"
        }
      }
    },
    "Subnet3RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "Subnet3"
        },
        "RouteTableId": {
          "Ref": "SubnetRTpriv"
        }
      }
    },
    "Subnet4RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "Subnet4"
        },
        "RouteTableId": {
          "Ref": "SubnetRTpriv"
        }
      }
    },
    "ELBServersSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "MyServerSG",
        "GroupDescription": "SG Created for ELB",
        "VpcId": {
          "Ref": "MyVpc"
        },
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
        }],
        "Tags": [{
          "Key": "Name",
          "Value": "MyServerSG"
        }]
      }
    },
    "ELBWeb": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "LoadBalancerName": "ELBWeb",
        "Instances": {
          "Ref": "MyWeb1"
        },
        "Subnets": [{
          "Ref": "Subnet1"
        }, {
          "Ref": "Subnet2"
        }],
        "CrossZone": "true",
        "SecurityGroups": {
          "Ref": "ELBServersSG"
        },
        "Listeners": [{
          "LoadBalancerPort": "80",
          "InstancePort": "80",
          "Protocol": "HTTP"
        }],
        "HealthCheck": {
          "Target": {
            "Fn::Join": ["", ["HTTP:", "80", "/index.html"]],
            "HealthyThreshold": "2",
            "UnhealthyThreshold": "2",
            "Interval": "20",
            "Timeout": "5",
          }
        }
      }
    },
    "WebServersSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "WebServersSG",
        "GroupDescription": "SG Created for Web Servers",
        "VpcId": {
          "Ref": "MyVpc"
        },
        "SecurityGroupIngress": [{
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [{
          "Key": "Name",
          "Value": "WebServersSG"
        }]
      }
    },
    "MyWeb1": {
      "Type": "AWS::EC2::Instance",
      "Metadata": {
        "AWS::CloudFormation::Init": {
          "config": {
            "packages": {
              "yum": {
                "httpd": []
              }
            },
            "groups": {},
            "users": {},
            "sources": {},
            "files": {
              "/var/www/html/index.html": {
                "content": "<h1> This worked!! </h1>"
              }
            },
            "commands": {},
            "services": {
              "sysvinit": {
                "httpd": {
                  "enabled": "true",
                  "ensureRunning": "true"
                }
              }
            }
          }
        }
      },
      "Properties": {
        "KeyName": {
          "Ref": "WebserverKeyName"
        },
        "ImageId": {
          "Fn::FindInMap": [
            "AMIID",
            {
              "Ref": "AWS::Region"
            },
            "64"
          ]
        },
        "InstanceType": {
          "Ref": "WebServerInstanceType"
        },
        "Monitoring": "false",
        "SecurityGroupIds": [{
          "Ref": "WebServersSG"
        }],
        "SubnetId": {
          "Ref": "Subnet1"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "MyWeb1"
        }],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash -ex\n",
                "# Install the files and packages from the metadata\n",
                "/opt/aws/bin/cfn-init -v ",
                "         --stack", {
                  "Ref": "AWS::StackName"
                },
                "         --resource MyWeb1 ",
                "         --region ", {
                  "Ref": "AWS::Region"
                },
                "\n"
              ]
            ]
          }
        }
      }
    }
  },
  "Outputs": {

  }
}
